# voicetype

./: .gitignore  README.md  pyproject.toml  requirements.txt  run.sh  run_app.py  setup.sh  voicetype.py  voicetype_app.py
