[project]
name = "voicetype"
version = "0.1.0"
description = "Voice-to-Text Input Tool - Press-to-talk voice transcription"
requires-python = ">=3.10,<3.15"
dependencies = [
    "openai-whisper",
    "torch",
    "torchaudio",
    "sounddevice",
    "soundfile",
    "pynput",
]

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

